--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "file-loader": "^1.1.11",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.10"
