--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "aleastChs",
   "license": "MIT",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
