--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "webpack-demo",
   "version": "0.0.1",
   "private": true,
-  "description": "",
+  "description": "This repo is to try out things in webpack, based for learning/testing new techs",
+  repository: {
+      type: "git",
+      url: "https://github.com/aleastChs/webpack-tests"
+  },
+  "keywords": ["learning", "new techs"],
+  "author": "aleastChs",
+  bugs: {
+      url: "https://github.com/aleastChs/webpack-tests/issues"
+  },
+  "license": "MIT",    
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open"
   },
-  "keywords": [],
-  "author": "aleastChs",
-  "license": "MIT",
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "html-webpack-plugin": "^3.2.0",
